[gd_scene load_steps=11 format=3 uid="uid://wibdq4g25tn8"]

[ext_resource type="Script" uid="uid://bvy016e15ws5e" path="res://fishing_minigame/fishing_game.gd" id="1_myvk3"]
[ext_resource type="Texture2D" uid="uid://crusqroyikri6" path="res://assests/Sunnyside_World_ASSET_PACK_V2.1/Sunnyside_World_Assets/UI/9slice_box_white/Box_Orange_Square.png" id="2_k55qs"]
[ext_resource type="Texture2D" uid="uid://i2endiv488ol" path="res://assests/Sunnyside_World_ASSET_PACK_V2.1/Sunnyside_World_Assets/UI/9slice_box_white/SlimSlider_Background.png" id="3_a0olb"]
[ext_resource type="Texture2D" uid="uid://dkldd0rx6s7hu" path="res://assests/Sunnyside_World_ASSET_PACK_V2.1/Sunnyside_World_Assets/UI/9slice_box_white/SlimSlider_Base.png" id="4_wblku"]
[ext_resource type="PackedScene" uid="uid://bxa641b5e8br1" path="res://fishing_minigame/fish.tscn" id="5_l1rca"]
[ext_resource type="PackedScene" uid="uid://cojq34nns7kuw" path="res://fishing_minigame/target.tscn" id="6_lc7oe"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l1kbx"]
texture = ExtResource("2_k55qs")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p2j5e"]
texture = ExtResource("3_a0olb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e3jrk"]
texture = ExtResource("4_wblku")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b8yci"]
bg_color = Color(0.20437372, 0.3734865, 0.8621187, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[node name="FishingMinigame" type="CanvasLayer"]
process_mode = 3

[node name="FishingGame" type="Control" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.5
offset_right = 150.0
offset_bottom = 150.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_myvk3")

[node name="PanelContainer" type="PanelContainer" parent="FishingGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_l1kbx")

[node name="MarginContainer" type="MarginContainer" parent="FishingGame/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="FishingGame/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="FishingGame/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CatchBar" type="ProgressBar" parent="FishingGame/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxTexture_p2j5e")
theme_override_styles/fill = SubResource("StyleBoxTexture_e3jrk")
show_percentage = false

[node name="AquaContainer" type="PanelContainer" parent="FishingGame/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_b8yci")

[node name="Fish" parent="FishingGame" node_paths=PackedStringArray("aquaContainer") instance=ExtResource("5_l1rca")]
position = Vector2(149, 150)
aquaContainer = NodePath("../PanelContainer/MarginContainer/VBoxContainer/AquaContainer")

[node name="Target" parent="FishingGame" instance=ExtResource("6_lc7oe")]
position = Vector2(150, 150)

[connection signal="target_entered" from="FishingGame/Target" to="FishingGame" method="_on_target_target_entered"]
[connection signal="target_exited" from="FishingGame/Target" to="FishingGame" method="_on_target_target_exited"]
